[gd_scene load_steps=2 format=3 uid="uid://coywhlthug50v"]

[ext_resource type="Script" path="res://_ui/settings_ui.gd" id="1_settings"]

[node name="SettingsUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Gameplay" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameplayLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
text = "Collection Settings"
theme_override_font_sizes/font_size = 16

[node name="AutoCollectCheck" type="CheckBox" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
button_pressed = true
text = "Auto-collect items (magnetic pickup)"

[node name="AutoCollectDesc" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
text = "When enabled, nearby items will automatically move toward you and be collected."
autowrap_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2

[node name="ShowPromptsCheck" type="CheckBox" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
button_pressed = true
text = "Show pickup prompts"

[node name="ShowIndicatorCheck" type="CheckBox" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
button_pressed = true
text = "Show collection status indicator"

[node name="Controls" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="PlaceholderLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
text = "Control settings coming soon..."
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)

[node name="Audio" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="PlaceholderLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = "Audio settings coming soon..."
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)

[node name="Graphics" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 12

[node name="BiomeSettingsLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Biome Settings"
theme_override_font_sizes/font_size = 16

[node name="BiomeStrengthLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Biome Height Variation: 25% (Medium)"
theme_override_font_sizes/font_size = 14

[node name="BiomeStrengthSlider" type="HSlider" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.25

[node name="BiomeWarningLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Warning: Values above 50% may cause terrain artifacts"
theme_override_colors/font_color = Color(0.8, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 11

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="VegetationSettingsLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Vegetation Settings"
theme_override_font_sizes/font_size = 16

[node name="VegetationDensityLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Vegetation Density: 100%"
theme_override_font_sizes/font_size = 14

[node name="VegetationDensitySlider" type="HSlider" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="VegetationDistanceLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
text = "Vegetation View Distance:"
theme_override_font_sizes/font_size = 14

[node name="VegetationDistanceOption" type="OptionButton" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="Video" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="PlaceholderLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/TabContainer/Video"]
layout_mode = 2
text = "Video settings coming soon..."
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ApplyButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Apply"

[node name="CloseButtonBottom" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Close"
